# libwz

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
include/: libwz.h  stdafx.h  string_utils.h  wz_archive.h  wz_canvas.h  wz_convex2d.h  wz_namespace.h  wz_package.h  wz_property.h  wz_sound.h  wz_stream.h  wz_type.h  wz_uol.h  wz_variant.h  wz_vector2d.h
src/: string_utils.cc  wz_archive.cc  wz_canvas.cc  wz_convex2d.cc  wz_namespace.cc  wz_package.cc  wz_property.cc  wz_sound.cc  wz_stream.cc  wz_uol.cc  wz_variant.cc  wz_vector2d.cc
